--- a/terms_conditions.html
+++ b/terms_conditions.html
@@ -135,8 +135,8 @@
         </li>
       </ul>
 
-      <a href="#" class="terms-pdf-btn">Accept Terms</a>
-      <a href="#" class="btn btn-secondary1">Decline</a>
+      <!-- <a href="#" class="terms-pdf-btn">Accept Terms</a>
+      <a href="#" class="btn btn-secondary1">Decline</a> -->
     </div>
 
     <!-- CTA Section -->
@@ -145,7 +145,7 @@
       <p>
         Discover how Ziya Academy can help you achieve your educational goals
       </p>
-      <a href="#" class="terms-cta-btn">Contact Us</a>
+      <a href="under_construction.html" class="terms-cta-btn">Contact Us</a>
     </div>
 
     <!-- Footer -->
