--- a/under_construction.html
+++ b/under_construction.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="UTF-8" />
+    <title>Internship Terms & Conditions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/main.css" />
-    <meta charset="UTF-8" />
-    <title>Website Under Construction</title>
- 
   </head>
   <body>
     <header class="header">
@@ -24,14 +28,19 @@
           class="construction-image"
         />
         <h1 class="construction-heading">Page Under Construction</h1>
-        <p class="construction-subheading">We're working hard to bring you an amazing experience.</p>
-        <p class="construction-subheading">This page will be available soon with exciting new content. Please check back later!</p>
+        <p class="construction-subheading">
+          We're working hard to bring you an amazing experience.
+        </p>
+        <p class="construction-subheading">
+          This page will be available soon with exciting new content. Please
+          check back later!
+        </p>
         <h4>Launching very soon!</h4>
         <a href="index.html" class="btn btn-secondary2">Back to Home</a>
       </div>
     </main>
-<!-- Footer -->
-     <div id="footer-placeholder"></div>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
     <script src="js/main.js"></script>
     <script src="js/include.js"></script>
   </body>
